--- a/BookBeeBeeProject/FE/Fe_Admin/Views/Account/Login.cshtml
+++ b/BookBeeBeeProject/FE/Fe_Admin/Views/Account/Login.cshtml
@@ -3,27 +3,44 @@
 
 }
 
-@model Fe_Admin.DTO.Account.LoginDTO
+ @model Fe_Admin.DTO.Account.LoginDTO
+
+
 
 <link rel="stylesheet" href="~/css1/style.css">
 
-<div class="wrapper">
-    <div class="title">Đăng Nhập</div>
+<div class="content">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 contents">
+                <div class="row justify-content-center">
+                    <div class="col-md-8">
+                        <div class="mb-4">
+                            <h2>Đăng nhập</h2>
+                            <p>Nhập tên tài khoản và mật khẩu để đăng nhập</p>
+                        </div>
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    @using (Html.BeginForm("Login", "Account", FormMethod.Post))
-    {
-        <div class="field">
-            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", required = "required" })
-            @Html.LabelFor(m => m.Username, "Tên Đăng Nhập")
+                        @using (Html.BeginForm("Login", "Account", FormMethod.Post))
+                        {
+                            <div class="form-group first">
+                                @Html.LabelFor(m => m.Username, "Tài Khoản")
+                                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", required = "required" })
+                                @Html.ValidationMessageFor(m => m.Username)
+                            </div>
+                            <div class="form-group last mb-4">
+                                @Html.LabelFor(m => m.Password, "Mật Khẩu")
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control", required = "required" })
+                                @Html.ValidationMessageFor(m => m.Password)
+                            </div>
+                            <input type="submit" value="Đăng Nhập" class="btn btn-block btn-primary">
+                        }
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img src="~/images/Capture.JPG" alt="Image" width="450px" height="400px" class="img-fluid">
+            </div>
         </div>
-
-        <div class="field">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control", required = "required" })
-            @Html.LabelFor(m => m.Password, "Mật Khẩu")
-        </div>
-
-        <div class="field">
-            <input type="submit" value="Đăng Nhập" class="btn btn-primary">
-        </div>
-    }
+    </div>
 </div>
