--- a/BookBeeBeeProject/FE/Fe_User/Views/Home/Index.cshtml
+++ b/BookBeeBeeProject/FE/Fe_User/Views/Home/Index.cshtml
@@ -2,7 +2,66 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<link rel="stylesheet" type="text/css" href="~/assets/styles/main_styles.css">
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2500">
+	<ol class="carousel-indicators">
+		<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+		<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+		<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+	</ol>
+
+	<div class="carousel-inner">
+		<div class="carousel-item active">
+			<div class="main_slider" style="background-image:url(assets/images/slider_1.jpg)">
+				<div class="container fill_height">
+					<div class="row align-items-center fill_height">
+						<div class="col">
+							<div class="main_slider_content">
+								<h1>Get up to 30% Off New Arrivals</h1>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="carousel-item">
+			<div class="main_slider" style="background-image:url(~/)">
+				<div class="container fill_height">
+					<div class="row align-items-center fill_height">
+						<div class="col">
+							<div class="main_slider_content">
+								<h1>Exclusive Offers on Trending Items</h1>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="carousel-item">
+			<div class="main_slider" style="background-image:url(images/slider_3.jpg)">
+				<div class="container fill_height">
+					<div class="row align-items-center fill_height">
+						<div class="col">
+							<div class="main_slider_content">
+								<h1>Discover New Season Deals</h1>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+	</a>
+	<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+	</a>
 </div>
