--- a/BookBeeBeeProject/FE/Fe_User/Views/Shared/_Layout.cshtml
+++ b/BookBeeBeeProject/FE/Fe_User/Views/Shared/_Layout.cshtml
@@ -1,49 +1,252 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Fe_User</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Fe_User.styles.css" asp-append-version="true" />
+    <title>@ViewBag.Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Helen Template">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+	<link rel="stylesheet" type="text/css" href="~/assets/styles/bootstrap4/bootstrap.min.css">
+	<link href="~/assets/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="~/assets/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
+	<link rel="stylesheet" type="text/css" href="~/assets/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
+	<link rel="stylesheet" type="text/css" href="~/assets/plugins/OwlCarousel2-2.2.1/animate.css">
+	<link rel="stylesheet" type="text/css" href="~/assets/styles/main_styles.css">
+	<link rel="stylesheet" type="text/css" href="~/assets/styles/responsive.css">
+	<link rel="stylesheet" type="text/css" href="~/assets/plugins/jquery-ui-1.12.1.custom/jquery-ui.css"> 
+
+    <meta name="description" content="@ViewBag.SeoDescription" />
+    <meta name="keywords" itemprop="keywords" content="@ViewBag.SeoKeyWord" />
+    <link rel="canonical" href="https://www.ten_mien_cua_cac_ban/" />
+    <meta name="robots" content="index,follow,noodp" />
+    <meta name="robots" content="noarchive">
+    <meta property="og:site_name" content="BookBee Store Online" />
+    <meta property="og:type" content="Website" />
+    <meta property="og:locale" content="vi_VN" />
+    <meta property="og:title" itemprop="name" content="@ViewBag.Title" />
+    <meta property="og:url" itemprop="url" content="https://www.ten_mien_cua_cac_ban/" />
+    <meta property="og:description" content="@ViewBag.SeoDescription" />
+    <meta content="https://cdn.24h.com.vn/upload/2-2018/images/2018-06-14/logo-chan-trang-24h.png" property="og:image" itemprop="thumbnailUrl" />
+	<link rel="stylesheet" type="text/css" href="~/assets/styles/responsive.css">
+	<script src="~/assets/js/jquery-3.2.1.min.js"></script>
+
+
+
+
+
+
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Fe_User</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+	@{
+		var httpContext = ViewContext.HttpContext;
+		var tenNguoiDing = httpContext.Session.GetString("TenNguoiDung");
+		var soDienThoai = httpContext.Session.GetString("soDienThoai");
+		var diaChi = httpContext.Session.GetString("DiaChi");
+		var email = httpContext.Session.GetString("Email");
+		var gioiTinh = httpContext.Session.GetString("GioiTinh");
+		var accessRole = httpContext.Session.GetString("Result");
+		var accessToken = httpContext.Session.GetString("AccessToken");
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - Fe_User - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+	}
+
+	<div class="super_container">
+
+		<header class="header trans_300">
+
+			<div class="top_nav">
+				<div class="container">
+					<div class="row">
+
+						<div class="col-md-6">
+							<div class="top_nav_left"><i class="fa fa-phone" aria-hidden="true"></i>Hotline:012235363</div> 
+						</div>
+
+						<div class="col-md-6 text-right">
+							<div class="top_nav_right">
+								<ul class="top_nav_menu">
+									<li class="currency">
+										<a href="#">
+											<i class="fa fa-envelope-o" aria-hidden="true"></i> cskh_online@cuahangbookbee.com.vn
+
+										</a>
+
+									</li>
+
+									<li class="account">
+										
+										@if (!User.Identity.IsAuthenticated)
+										{
+											<a href="#">
+												My Account
+												<i class="fa fa-angle-down"></i>
+											</a>
+											<ul class="account_selection">
+												<li><a href="@Url.Action("Login", "Account")"><i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a></li>
+												<li><a href="@Url.Action("Register", "Account")"><i class="fa fa-user-plus" aria-hidden="true"></i>Register</a></li>
+												
+											</ul>
+										}
+										else
+										{
+											<a href="#">
+												@User.Identity.Name
+												<i class="fa fa-angle-down"></i>
+											</a>
+											<ul class="account_selection">
+												<li><a href="?"><i class="fa fa-sign-in" aria-hidden="true"></i>Profile</a></li>
+												<li><a href="@Url.Action("Logout", "Account")"><i class="fa fa-sign-in" aria-hidden="true"></i>Logout</a></li>
+											</ul>
+										}
+										
+	    							</li>
+	    						</ul>
+								@if (!User.Identity.IsAuthenticated)
+								{
+									<div style="display:none">
+										@using (Html.BeginForm("LogOff","Account",FormMethod.Post,new{@id = "logOffForm"}))
+										@Html.AntiForgeryToken()}
+									</div>
+								}
+							</div>
+	    				</div>
+	    			</div>
+	    		</div>
+	    	</div>
+	    
+	    	<!-- Main Navigation -->
+	    
+	    	<div class="main_nav_container">
+	    		<div class="container">
+	    			<div class="row">
+	    				<div class="col-lg-12 text-right">
+	    					<div class="logo_container">
+	    						<a href="#">BOOK<span>BEE</span></a>
+	    						<img src="~/assets/images/An Bùi.png" alt="Book Bee Logo" class="logo_image">
+	    					</div>
+	    
+	    					
+	    	            <nav class="navbar">
+							
+							<div class="hamburger_container">
+								<i class="fa fa-bars" aria-hidden="true"></i>
+							</div>
+								<form class="search_form" action="/search" method="GET">
+									<input type="text" class="search_input" name="q" placeholder="Tìm kiếm..." aria-label="Search">
+									<button type="submit" class="search_button">
+										<i class="fa fa-search"></i>
+									</button>
+								</form>
+							<ul class="navbar_user">
+								
+								<li class="checkout">
+									<a href="#">
+										<i class="fa fa-shopping-cart" aria-hidden="true"></i>
+										<span id="checkout_items" class="checkout_items">2</span>
+									</a>
+								</li>
+							</ul>
+
+						</nav>
+	    				</div>
+	    			</div>
+	    		</div>
+	    	</div>
+	    
+	    </header>
+	    
+	    <div class="fs_menu_overlay"></div>
+	    <div class="hamburger_menu">
+	    	<div class="hamburger_close"><i class="fa fa-times" aria-hidden="true"></i></div>
+	    	<div class="hamburger_menu_content text-right">
+	    		<ul class="menu_top_nav">
+	    			<h3 style="font-size: 20px; color: crimson;">Danh Mục Sản Phẩm</h3>
+	    			<li class="menu_item"><a href="#">LỊCH SỬ TRUYỀN THỐNG</a></li>
+	    			<li class="menu_item"><a href="#">VĂN HỌC VIỆT NAM</a></li>
+	    			<li class="menu_item"><a href="#">VĂN HỌC NƯỚC NGOÀI</a></li>
+	    			<li class="menu_item"><a href="#">TRUYỆN TRANH</a></li>
+	    			<li class="menu_item"><a href="#">KIẾN THỨC KHOA HỌC</a></li>
+	    			<li class="menu_item has-children">
+	    				<a href="#">
+	    					ĐỘ TUỔI
+	    					<i class="fa fa-angle-down"></i>
+	    				</a>
+	    				<ul class="menu_selection">
+	    					<li><a href="#">Nhà trẻ, mẫu giáo (0-5 Tuổi)</a></li>
+	    					<li><a href="#">Nhi đồng (6-10Tuổi)</a></li>
+	    					<li><a href="#">Thiếu niên (11-15Tuổi)</a></li>
+	    					<li><a href="#">Tuổi mới lớn (16-18Tuổi)</a></li>
+	    				</ul>
+	    			</li> 
+	    
+	    
+	    
+	    		</ul>
+	    	</div>
+	    </div>
+	    
+	  
+        @RenderBody()
+
+        <!-- Newsletter -->
+        @*    @Html.Action("Partial_Subcrice", "Home")*@
+        <!-- Footer -->
+
+		<footer class="footer">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="footer_nav_container d-flex flex-sm-row flex-column align-items-center justify-content-lg-start justify-content-center text-center">
+							<ul class="footer_nav">
+								<li><a href="#">DỊCH VỤ</a></li>
+								<li><a href="#">HỖ TRỢ</a></li>
+								<li><a href="contact.html">CỬA HÀNG BOOK BEE</a></li>
+							</ul>
+
+						</div>
+
+					</div>
+					<div class="col-lg-6">
+						<div class="footer_social d-flex flex-row align-items-center justify-content-lg-end justify-content-center">
+							<ul>
+								<h6 class="h6">KẾT NỐI MẠNG XÃ HỘI</h6>
+								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+								<li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
+								<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="footer_nav_container">
+							<div class="cr">©2025 Cửa hàng xây dựng website bán sách BookBee</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
+
+	</div>
+
+
+	<script src="~/assets/js/jquery-3.2.1.min.js"></script>
+	<script src="~/assets/styles/bootstrap4/popper.js"></script>
+	<script src="~/assets/styles/bootstrap4/bootstrap.min.js"></script>
+	<script src="~/assets/plugins/Isotope/isotope.pkgd.min.js"></script>
+	<script src="~/assets/plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
+	<script src="~/assets/plugins/easing/easing.js"></script>
+	<script src="~/assets/plugins/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
+	<script src="~/assets/js/custom.js"></script>
+
+
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="~/js/site.js" asp-append-version="true"></script>
+	@await RenderSectionAsync("Scripts", required: false)
+
 </body>
 </html>
