--- a/BookBeeBeeProject/FE/Fe_Admin/Views/Shared/_PartiaSideBar.cshtml
+++ b/BookBeeBeeProject/FE/Fe_Admin/Views/Shared/_PartiaSideBar.cshtml
@@ -129,7 +129,11 @@
                     </a>
                 </li>
 
-               
+                <li>
+                    <a href="@Url.Action("Index", "Supplier")">
+                        <i class="bi bi-circle"></i><span>Danh Sách Nhà Cung Cấp</span>
+                    </a>
+                </li>
 
             </ul>
         </li>
